# dreamy

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  bun.lockb  index.html  justfile  package-lock.json  package.json
.github/workflows/: release.yml  verify.yml
src/: App.css  App.tsx  Dep.tsx  FlatDep.tsx  FlatStore.ts  Import.tsx  Licenses.tsx  Represenation.ts  commands.ts  main.tsx
src-tauri/: Cargo.toml  justfile  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: filter.rs  in_memory_store.rs  load_per_dep.rs  loader.rs  main.rs  read_model.rs  representation.rs
src-tauri/src/dep_core/: extraction.rs  mod.rs
src-tauri/src/entry_point/: commands.rs  mod.rs
src-tauri/src/github/: mod.rs  remote.rs
src-tauri/src/renovate/: loader.rs  mod.rs  process.rs
src-tauri/src/store/: filter.rs  in_memory_store.rs  mod.rs
