[package]
name = "dreamy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", default-features = false , features = [] }
serde = { version = "1", default-features = false }
serde_json = "1"
serde_derive = "1.0.203"
tauri-plugin-dialog = "2.0.0-beta.4"
tauri-plugin-notification = { version = "2.0.0-beta.3", features = ["zbus"], default-features = false }
tauri-plugin-os = "2.0.0-beta.3"
tauri-plugin-process = "2.0.0-beta.3"
tauri-plugin-fs = "2.0.0-beta.4"
tauri-plugin-http = { version = "2.0.0-beta.4", default-features = false }
tauri-plugin-clipboard-manager = "2.1.0-beta.0"
tauri-plugin-shell = "2.0.0-beta.3"
fuzzy-matcher = "0.3.1"
log = "0.4.21"
secrecy = "0.8.0"
reqwest = { version = "0.12.4", features = ["blocking"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.3"
